--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "react": "^16.5.1",
     "react-bootstrap": "^0.32.4",
     "react-dom": "^16.5.1",
+    "react-map-gl": "^3.3.4",
+    "react-mapbox-gl": "^3.9.2",
     "react-router-bootstrap": "^0.24.4",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.5"
