--- a/package.json
+++ b/package.json
@@ -6,15 +6,17 @@
     "@devexpress/dx-react-core": "^1.7.2",
     "@devexpress/dx-react-grid": "^1.7.2",
     "@devexpress/dx-react-grid-bootstrap3": "^1.7.2",
-    "bootstrap": "^3.3.7",
-    "react": "^16.5.1",
+    "bootstrap": "^4.1.1",
+    "react": "^16.3.2",
     "react-bootstrap": "^0.32.4",
-    "react-dom": "^16.5.1",
+    "react-dom": "^16.3.2",
     "react-map-gl": "^3.3.4",
     "react-mapbox-gl": "^3.9.2",
     "react-router-bootstrap": "^0.24.4",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "1.1.5"
+    "react-scripts": "1.1.5",
+    "reactstrap": "^6.4.0",
+    "styled-components": "^3.4.9"
   },
   "scripts": {
     "start": "react-scripts start",
